Scriber/Language/Antlr/ScriberParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Scriber.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Scriber.Language.Antlr {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class ScriberParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		COMMENT=1, LINE_COMMENT=2, NEWLINE=3, AT=4, QUOTATION=5, PERCENT=6, CURRENCY=7, 
		AMPERSAND=8, TILDE=9, UNDERSCORE=10, PARANTHESESOPEN=11, PARANTHESESCLOSE=12, 
		CURLYOPEN=13, CURLYCLOSE=14, BRACKETOPEN=15, BRACKETCLOSE=16, COLON=17, 
		COMMA=18, CARET=19, BACKSLASH=20, SPACE=21, TEXT=22;
	public const int
		RULE_root = 0, RULE_line = 1, RULE_lineContent = 2, RULE_environment = 3, 
		RULE_inlineEnvironment = 4, RULE_multilineEnvironment = 5, RULE_arguments = 6, 
		RULE_argument = 7, RULE_jsonObject = 8, RULE_keyValuePair = 9, RULE_key = 10, 
		RULE_value = 11, RULE_quotation = 12, RULE_identifier = 13, RULE_quoated = 14, 
		RULE_text = 15, RULE_standard = 16;
	public static readonly string[] ruleNames = {
		"root", "line", "lineContent", "environment", "inlineEnvironment", "multilineEnvironment", 
		"arguments", "argument", "jsonObject", "keyValuePair", "key", "value", 
		"quotation", "identifier", "quoated", "text", "standard"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, "'\"'", "'%'", "'$'", "'&'", "'~'", null, 
		"'('", "')'", "'{'", "'}'", "'['", "']'", "':'", "','", null, null, "' '"
	};
	private static readonly string[] _SymbolicNames = {
		null, "COMMENT", "LINE_COMMENT", "NEWLINE", "AT", "QUOTATION", "PERCENT", 
		"CURRENCY", "AMPERSAND", "TILDE", "UNDERSCORE", "PARANTHESESOPEN", "PARANTHESESCLOSE", 
		"CURLYOPEN", "CURLYCLOSE", "BRACKETOPEN", "BRACKETCLOSE", "COLON", "COMMA", 
		"CARET", "BACKSLASH", "SPACE", "TEXT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Scriber.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ScriberParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ScriberParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ScriberParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class RootContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(ScriberParser.Eof, 0); }
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public RootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_root; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScriberVisitor<TResult> typedVisitor = visitor as IScriberVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRoot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RootContext root() {
		RootContext _localctx = new RootContext(Context, State);
		EnterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 37;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NEWLINE) | (1L << AT) | (1L << QUOTATION) | (1L << PERCENT) | (1L << CURRENCY) | (1L << AMPERSAND) | (1L << TILDE) | (1L << UNDERSCORE) | (1L << PARANTHESESOPEN) | (1L << PARANTHESESCLOSE) | (1L << BRACKETOPEN) | (1L << COLON) | (1L << COMMA) | (1L << CARET) | (1L << BACKSLASH) | (1L << SPACE) | (1L << TEXT))) != 0)) {
				{
				{
				State = 34; line();
				}
				}
				State = 39;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 40; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		public ITerminalNode NEWLINE() { return GetToken(ScriberParser.NEWLINE, 0); }
		public LineContentContext lineContent() {
			return GetRuleContext<LineContentContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScriberVisitor<TResult> typedVisitor = visitor as IScriberVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 43;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AT) | (1L << QUOTATION) | (1L << PERCENT) | (1L << CURRENCY) | (1L << AMPERSAND) | (1L << TILDE) | (1L << UNDERSCORE) | (1L << PARANTHESESOPEN) | (1L << PARANTHESESCLOSE) | (1L << BRACKETOPEN) | (1L << COLON) | (1L << COMMA) | (1L << CARET) | (1L << BACKSLASH) | (1L << SPACE) | (1L << TEXT))) != 0)) {
				{
				State = 42; lineContent();
				}
			}

			State = 45; Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContentContext : ParserRuleContext {
		public EnvironmentContext[] environment() {
			return GetRuleContexts<EnvironmentContext>();
		}
		public EnvironmentContext environment(int i) {
			return GetRuleContext<EnvironmentContext>(i);
		}
		public QuotationContext[] quotation() {
			return GetRuleContexts<QuotationContext>();
		}
		public QuotationContext quotation(int i) {
			return GetRuleContext<QuotationContext>(i);
		}
		public TextContext[] text() {
			return GetRuleContexts<TextContext>();
		}
		public TextContext text(int i) {
			return GetRuleContext<TextContext>(i);
		}
		public LineContentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lineContent; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScriberVisitor<TResult> typedVisitor = visitor as IScriberVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLineContent(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContentContext lineContent() {
		LineContentContext _localctx = new LineContentContext(Context, State);
		EnterRule(_localctx, 4, RULE_lineContent);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 50;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					State = 50;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case AT:
					case BRACKETOPEN:
						{
						State = 47; environment();
						}
						break;
					case QUOTATION:
						{
						State = 48; quotation();
						}
						break;
					case PERCENT:
					case CURRENCY:
					case AMPERSAND:
					case TILDE:
					case UNDERSCORE:
					case PARANTHESESOPEN:
					case PARANTHESESCLOSE:
					case COLON:
					case COMMA:
					case CARET:
					case BACKSLASH:
					case SPACE:
					case TEXT:
						{
						State = 49; text();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 52;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnvironmentContext : ParserRuleContext {
		public InlineEnvironmentContext inlineEnvironment() {
			return GetRuleContext<InlineEnvironmentContext>(0);
		}
		public MultilineEnvironmentContext multilineEnvironment() {
			return GetRuleContext<MultilineEnvironmentContext>(0);
		}
		public EnvironmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_environment; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScriberVisitor<TResult> typedVisitor = visitor as IScriberVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEnvironment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EnvironmentContext environment() {
		EnvironmentContext _localctx = new EnvironmentContext(Context, State);
		EnterRule(_localctx, 6, RULE_environment);
		try {
			State = 56;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case BRACKETOPEN:
				EnterOuterAlt(_localctx, 1);
				{
				State = 54; inlineEnvironment();
				}
				break;
			case AT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 55; multilineEnvironment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InlineEnvironmentContext : ParserRuleContext {
		public ITerminalNode BRACKETOPEN() { return GetToken(ScriberParser.BRACKETOPEN, 0); }
		public ITerminalNode BRACKETCLOSE() { return GetToken(ScriberParser.BRACKETCLOSE, 0); }
		public ITerminalNode AT() { return GetToken(ScriberParser.AT, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode PARANTHESESOPEN() { return GetToken(ScriberParser.PARANTHESESOPEN, 0); }
		public ITerminalNode PARANTHESESCLOSE() { return GetToken(ScriberParser.PARANTHESESCLOSE, 0); }
		public TextContext[] text() {
			return GetRuleContexts<TextContext>();
		}
		public TextContext text(int i) {
			return GetRuleContext<TextContext>(i);
		}
		public ArgumentsContext arguments() {
			return GetRuleContext<ArgumentsContext>(0);
		}
		public InlineEnvironmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_inlineEnvironment; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScriberVisitor<TResult> typedVisitor = visitor as IScriberVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInlineEnvironment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InlineEnvironmentContext inlineEnvironment() {
		InlineEnvironmentContext _localctx = new InlineEnvironmentContext(Context, State);
		EnterRule(_localctx, 8, RULE_inlineEnvironment);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58; Match(BRACKETOPEN);
			State = 62;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PERCENT) | (1L << CURRENCY) | (1L << AMPERSAND) | (1L << TILDE) | (1L << UNDERSCORE) | (1L << PARANTHESESOPEN) | (1L << PARANTHESESCLOSE) | (1L << COLON) | (1L << COMMA) | (1L << CARET) | (1L << BACKSLASH) | (1L << SPACE) | (1L << TEXT))) != 0)) {
				{
				{
				State = 59; text();
				}
				}
				State = 64;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 65; Match(BRACKETCLOSE);
			State = 66; Match(AT);
			State = 67; identifier();
			State = 68; Match(PARANTHESESOPEN);
			State = 70;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				State = 69; arguments();
				}
				break;
			}
			State = 72; Match(PARANTHESESCLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MultilineEnvironmentContext : ParserRuleContext {
		public ITerminalNode AT() { return GetToken(ScriberParser.AT, 0); }
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ITerminalNode PARANTHESESOPEN() { return GetToken(ScriberParser.PARANTHESESOPEN, 0); }
		public ITerminalNode PARANTHESESCLOSE() { return GetToken(ScriberParser.PARANTHESESCLOSE, 0); }
		public ArgumentsContext arguments() {
			return GetRuleContext<ArgumentsContext>(0);
		}
		public ITerminalNode CURLYOPEN() { return GetToken(ScriberParser.CURLYOPEN, 0); }
		public ITerminalNode CURLYCLOSE() { return GetToken(ScriberParser.CURLYCLOSE, 0); }
		public LineContentContext[] lineContent() {
			return GetRuleContexts<LineContentContext>();
		}
		public LineContentContext lineContent(int i) {
			return GetRuleContext<LineContentContext>(i);
		}
		public ITerminalNode[] NEWLINE() { return GetTokens(ScriberParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(ScriberParser.NEWLINE, i);
		}
		public ITerminalNode[] SPACE() { return GetTokens(ScriberParser.SPACE); }
		public ITerminalNode SPACE(int i) {
			return GetToken(ScriberParser.SPACE, i);
		}
		public MultilineEnvironmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_multilineEnvironment; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScriberVisitor<TResult> typedVisitor = visitor as IScriberVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMultilineEnvironment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MultilineEnvironmentContext multilineEnvironment() {
		MultilineEnvironmentContext _localctx = new MultilineEnvironmentContext(Context, State);
		EnterRule(_localctx, 10, RULE_multilineEnvironment);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74; Match(AT);
			State = 75; identifier();
			State = 76; Match(PARANTHESESOPEN);
			State = 78;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				{
				State = 77; arguments();
				}
				break;
			}
			State = 80; Match(PARANTHESESCLOSE);
			State = 96;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
			case 1:
				{
				State = 84;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==NEWLINE || _la==SPACE) {
					{
					{
					State = 81;
					_la = TokenStream.LA(1);
					if ( !(_la==NEWLINE || _la==SPACE) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
					}
					State = 86;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 87; Match(CURLYOPEN);
				State = 92;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NEWLINE) | (1L << AT) | (1L << QUOTATION) | (1L << PERCENT) | (1L << CURRENCY) | (1L << AMPERSAND) | (1L << TILDE) | (1L << UNDERSCORE) | (1L << PARANTHESESOPEN) | (1L << PARANTHESESCLOSE) | (1L << BRACKETOPEN) | (1L << COLON) | (1L << COMMA) | (1L << CARET) | (1L << BACKSLASH) | (1L << SPACE) | (1L << TEXT))) != 0)) {
					{
					State = 90;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case AT:
					case QUOTATION:
					case PERCENT:
					case CURRENCY:
					case AMPERSAND:
					case TILDE:
					case UNDERSCORE:
					case PARANTHESESOPEN:
					case PARANTHESESCLOSE:
					case BRACKETOPEN:
					case COLON:
					case COMMA:
					case CARET:
					case BACKSLASH:
					case SPACE:
					case TEXT:
						{
						State = 88; lineContent();
						}
						break;
					case NEWLINE:
						{
						State = 89; Match(NEWLINE);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					State = 94;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 95; Match(CURLYCLOSE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArgumentsContext : ParserRuleContext {
		public ArgumentContext[] argument() {
			return GetRuleContexts<ArgumentContext>();
		}
		public ArgumentContext argument(int i) {
			return GetRuleContext<ArgumentContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(ScriberParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(ScriberParser.COMMA, i);
		}
		public ITerminalNode[] SPACE() { return GetTokens(ScriberParser.SPACE); }
		public ITerminalNode SPACE(int i) {
			return GetToken(ScriberParser.SPACE, i);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arguments; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScriberVisitor<TResult> typedVisitor = visitor as IScriberVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArguments(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArgumentsContext arguments() {
		ArgumentsContext _localctx = new ArgumentsContext(Context, State);
		EnterRule(_localctx, 12, RULE_arguments);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98; argument();
			State = 104;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 99; Match(COMMA);
				State = 100; Match(SPACE);
				State = 101; argument();
				}
				}
				State = 106;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArgumentContext : ParserRuleContext {
		public JsonObjectContext jsonObject() {
			return GetRuleContext<JsonObjectContext>(0);
		}
		public StandardContext standard() {
			return GetRuleContext<StandardContext>(0);
		}
		public QuotationContext quotation() {
			return GetRuleContext<QuotationContext>(0);
		}
		public ArgumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_argument; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScriberVisitor<TResult> typedVisitor = visitor as IScriberVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArgument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArgumentContext argument() {
		ArgumentContext _localctx = new ArgumentContext(Context, State);
		EnterRule(_localctx, 14, RULE_argument);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case CURLYOPEN:
				{
				State = 107; jsonObject();
				}
				break;
			case PERCENT:
			case CURRENCY:
			case AMPERSAND:
			case TILDE:
			case UNDERSCORE:
			case PARANTHESESOPEN:
			case PARANTHESESCLOSE:
			case COLON:
			case COMMA:
			case CARET:
			case BACKSLASH:
			case SPACE:
			case TEXT:
				{
				State = 108; standard();
				}
				break;
			case QUOTATION:
				{
				State = 109; quotation();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class JsonObjectContext : ParserRuleContext {
		public ITerminalNode CURLYOPEN() { return GetToken(ScriberParser.CURLYOPEN, 0); }
		public ITerminalNode CURLYCLOSE() { return GetToken(ScriberParser.CURLYCLOSE, 0); }
		public ITerminalNode[] SPACE() { return GetTokens(ScriberParser.SPACE); }
		public ITerminalNode SPACE(int i) {
			return GetToken(ScriberParser.SPACE, i);
		}
		public KeyValuePairContext[] keyValuePair() {
			return GetRuleContexts<KeyValuePairContext>();
		}
		public KeyValuePairContext keyValuePair(int i) {
			return GetRuleContext<KeyValuePairContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(ScriberParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(ScriberParser.COMMA, i);
		}
		public JsonObjectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_jsonObject; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScriberVisitor<TResult> typedVisitor = visitor as IScriberVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitJsonObject(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public JsonObjectContext jsonObject() {
		JsonObjectContext _localctx = new JsonObjectContext(Context, State);
		EnterRule(_localctx, 16, RULE_jsonObject);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112; Match(CURLYOPEN);
			State = 114;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,14,Context) ) {
			case 1:
				{
				State = 113; Match(SPACE);
				}
				break;
			}
			State = 125;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==TEXT) {
				{
				State = 116; keyValuePair();
				State = 122;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==COMMA) {
					{
					{
					State = 117; Match(COMMA);
					State = 118; Match(SPACE);
					State = 119; keyValuePair();
					}
					}
					State = 124;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
			}

			State = 128;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SPACE) {
				{
				State = 127; Match(SPACE);
				}
			}

			State = 130; Match(CURLYCLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class KeyValuePairContext : ParserRuleContext {
		public KeyContext key() {
			return GetRuleContext<KeyContext>(0);
		}
		public ITerminalNode COLON() { return GetToken(ScriberParser.COLON, 0); }
		public ITerminalNode SPACE() { return GetToken(ScriberParser.SPACE, 0); }
		public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public KeyValuePairContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_keyValuePair; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScriberVisitor<TResult> typedVisitor = visitor as IScriberVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitKeyValuePair(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public KeyValuePairContext keyValuePair() {
		KeyValuePairContext _localctx = new KeyValuePairContext(Context, State);
		EnterRule(_localctx, 18, RULE_keyValuePair);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 132; key();
			State = 133; Match(COLON);
			State = 134; Match(SPACE);
			State = 135; value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class KeyContext : ParserRuleContext {
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public KeyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_key; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScriberVisitor<TResult> typedVisitor = visitor as IScriberVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitKey(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public KeyContext key() {
		KeyContext _localctx = new KeyContext(Context, State);
		EnterRule(_localctx, 20, RULE_key);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 137; identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueContext : ParserRuleContext {
		public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public ValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_value; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IScriberVisitor<TResult> typedVisitor = visitor as IScriberVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValueContext value() {
		ValueContext _localctx = new ValueContext(Context, State);
		EnterRule(_localctx, 22, RULE_value);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139; identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
